--- a/maquetacion/index.html
+++ b/maquetacion/index.html
@@ -64,14 +64,14 @@
                     <input type="submit" value="Ingresar" />
                 </form>
 
-                <a href="#">Zona de students</a>
-                <a href="#">Zona de teachers</a>
-                <a href="#">Notas</a>
+                <a href="#" class="enlace">Zona de students</a>
+                <a href="#" class="enlace">Zona de teachers</a>
+                <a href="#" class="enlace">Notas</a>
 
             </div>
 
             <div class="widget" id="login">
-                <h3>Aula virtual 1</h3>
+                <h3 id="aula1">Aula virtual 1</h3>
                 <form >
                     <label for="">Usuario</label>
                     <input type="text"/>
@@ -85,7 +85,7 @@
         
 
             <div class="widget" id="login">
-                <h3>Aula virtual 2</h3>
+                <h3 id="aula2">Aula virtual 2</h3>
                 <form >
                     <label for="">Usuario</label>
                     <input type="text">
@@ -111,6 +111,13 @@
             </div>
 
         </aside>
+        <aside id="frase">
+            Lorem etur adipisicing elit. Ns rem, iure quia harum reprehenderit beatae in! Rerum iure assumenda distinctio odio possimus accusantium quis, voluptatem ea vitae.
+            modi asperiores?
+            <br>
+            <a href="#">Leer mas frases</a>
+        </aside>
+        
     </div>
 </body>
 </html>
