sections are created

--- a/maquetacion/index.html
+++ b/maquetacion/index.html
@@ -111,13 +111,150 @@
             </div>
 
         </aside>
+       
+        <div id="sections">
+
+            <section id="frontend">
+                <span class="stickers">
+                    <img class= "stickerOne"src="img/scotch.png" alt="Pegatina">
+                    <img class= "stickerTwo"src="img/scotch.png" alt="Pegatina">
+                </span>
+                <h2 class="titulo blue">Noticias de FrontEnd</h2>
+                <article class="article">
+                    <p>
+                        <a href="#">Titulo de la entrada</a>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Rerum ullam soluta animi quasi suscipit iure dolorem dolor
+                        sapiente vero numquam, ex, natus quos excepturi porro, aut distinctio at odio id?
+                    </p> 
+                    <span class="date">[11-05-2022. JuanD Olarte]</span>
+                </article>
+                <article class="article">
+                    <p>
+                        <a href="#">Titulo de la entrada</a>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Rerum ullam soluta animi quasi suscipit iure dolorem dolor
+                        sapiente vero numquam, ex, natus quos excepturi porro, aut distinctio at odio id?
+                    </p> 
+                    <span class="date">[11-05-2022. JuanD Olarte]</span>
+                </article>
+                <article class="article">
+                    <p>
+                        <a href="#">Titulo de la entrada</a>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Rerum ullam soluta animi quasi suscipit iure dolorem dolor
+                        sapiente vero numquam, ex, natus quos excepturi porro, aut distinctio at odio id?
+                    </p> 
+                    <span class="date">[11-05-2022. JuanD Olarte]</span>
+                </article>
+                <article class="article">
+                    <p>
+                        <a href="#">Titulo de la entrada</a>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Rerum ullam soluta animi quasi suscipit iure dolorem dolor
+                        sapiente vero numquam, ex, natus quos excepturi porro, aut distinctio at odio id?
+                    </p> 
+                    <span class="date">[11-05-2022. JuanD Olarte]</span>
+                </article>
+            </section>
+
+            <section id="backend">
+                <span class="stickers">
+                    <img class= "stickerOne"src="img/scotch.png" alt="Pegatina">
+                    <img class= "stickerTwo"src="img/scotch.png" alt="Pegatina">
+                </span>
+                <h2 class="titulo red">Noticias del backend</h2>
+                <article class="article">
+                    <p>
+                        <a href="#">Titulo de la entrada</a>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Rerum ullam soluta animi quasi suscipit iure dolorem dolor
+                        sapiente vero numquam, ex, natus quos excepturi porro, aut distinctio at odio id?
+                    </p> 
+                    <span class="date">[11-05-2022. JuanD Olarte]</span>
+                </article>
+                <article class="article">
+                    <p>
+                        <a href="#">Titulo de la entrada</a>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Rerum ullam soluta animi quasi suscipit iure dolorem dolor
+                        sapiente vero numquam, ex, natus quos excepturi porro, aut distinctio at odio id?
+                    </p> 
+                    <span class="date">[11-05-2022. JuanD Olarte]</span>
+                </article>
+                <article class="article">
+                    <p>
+                        <a href="#">Titulo de la entrada</a>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Rerum ullam soluta animi quasi suscipit iure dolorem dolor
+                        sapiente vero numquam, ex, natus quos excepturi porro, aut distinctio at odio id?
+                    </p> 
+                    <span class="date">[11-05-2022. JuanD Olarte]</span>
+                </article>
+                <article class="article">
+                    <p>
+                        <a href="#">Titulo de la entrada</a>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Rerum ullam soluta animi quasi suscipit iure dolorem dolor
+                        sapiente vero numquam, ex, natus quos excepturi porro, aut distinctio at odio id?
+                    </p> 
+                    <span class="date">[11-05-2022. JuanD Olarte]</span>
+                </article>
+            </section>
+
+            <section id="instructor">
+                <span class="stickers">
+                    <img class= "stickerOne"src="img/scotch.png" alt="Pegatina">
+                    <img class= "stickerTwo"src="img/scotch.png" alt="Pegatina">
+                </span>
+                <h2 class="titulo orange">Noticias del instructor</h2>
+                <article class="article">
+                    <p>
+                        <a href="#">Titulo de la entrada</a>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Rerum ullam soluta animi quasi suscipit iure dolorem dolor
+                        sapiente vero numquam, ex, natus quos excepturi porro, aut distinctio at odio id?
+                    </p> 
+                    <span class="date">[11-05-2022. JuanD Olarte]</span>
+                </article>
+                <article class="article">
+                    <p>
+                        <a href="#">Titulo de la entrada</a>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Rerum ullam soluta animi quasi suscipit iure dolorem dolor
+                        sapiente vero numquam, ex, natus quos excepturi porro, aut distinctio at odio id?
+                    </p> 
+                    <span class="date">[11-05-2022. JuanD Olarte]</span>
+                </article>
+                <article class="article">
+                    <p>
+                        <a href="#">Titulo de la entrada</a>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Rerum ullam soluta animi quasi suscipit iure dolorem dolor
+                        sapiente vero numquam, ex, natus quos excepturi porro, aut distinctio at odio id?
+                    </p> 
+                    <span class="date">[11-05-2022. JuanD Olarte]</span>
+                </article>
+                <article class="article">
+                    <p>
+                        <a href="#">Titulo de la entrada</a>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Rerum ullam soluta animi quasi suscipit iure dolorem dolor
+                        sapiente vero numquam, ex, natus quos excepturi porro, aut distinctio at odio id?
+                    </p> 
+                    <span class="date">[11-05-2022. JuanD Olarte]</span>
+                </article>
+            </section>
+
+        </div>
+
         <aside id="frase">
             Lorem etur adipisicing elit. Ns rem, iure quia harum reprehenderit beatae in! Rerum iure assumenda distinctio odio possimus accusantium quis, voluptatem ea vitae.
             modi asperiores?
             <br>
             <a href="#">Leer mas frases</a>
         </aside>
-        
+
     </div>
 </body>
 </html>
