icons svg are added

--- a/maquetacion/index.html
+++ b/maquetacion/index.html
@@ -121,6 +121,7 @@
                 </span>
                 <h2 class="titulo blue">Noticias de FrontEnd</h2>
                 <article class="article">
+                    <span class="icon">a</span>
                     <p>
                         <a href="#">Titulo de la entrada</a>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. 
@@ -130,6 +131,8 @@
                     <span class="date">[11-05-2022. JuanD Olarte]</span>
                 </article>
                 <article class="article">
+                    <span class="icon">a</span>
+
                     <p>
                         <a href="#">Titulo de la entrada</a>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. 
@@ -139,6 +142,8 @@
                     <span class="date">[11-05-2022. JuanD Olarte]</span>
                 </article>
                 <article class="article">
+                    <span class="icon">a</span>
+
                     <p>
                         <a href="#">Titulo de la entrada</a>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. 
@@ -148,6 +153,8 @@
                     <span class="date">[11-05-2022. JuanD Olarte]</span>
                 </article>
                 <article class="article">
+                    <span class="icon">a</span>
+
                     <p>
                         <a href="#">Titulo de la entrada</a>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. 
@@ -165,6 +172,8 @@
                 </span>
                 <h2 class="titulo red">Noticias del backend</h2>
                 <article class="article">
+                    <span class="icon">a</span>
+
                     <p>
                         <a href="#">Titulo de la entrada</a>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. 
@@ -174,6 +183,8 @@
                     <span class="date">[11-05-2022. JuanD Olarte]</span>
                 </article>
                 <article class="article">
+                    <span class="icon">a</span>
+
                     <p>
                         <a href="#">Titulo de la entrada</a>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. 
@@ -183,6 +194,8 @@
                     <span class="date">[11-05-2022. JuanD Olarte]</span>
                 </article>
                 <article class="article">
+                    <span class="icon">a</span>
+
                     <p>
                         <a href="#">Titulo de la entrada</a>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. 
@@ -192,6 +205,8 @@
                     <span class="date">[11-05-2022. JuanD Olarte]</span>
                 </article>
                 <article class="article">
+
+                    <span class="icon">a</span>
                     <p>
                         <a href="#">Titulo de la entrada</a>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. 
@@ -209,6 +224,8 @@
                 </span>
                 <h2 class="titulo orange">Noticias del instructor</h2>
                 <article class="article">
+
+                    <span class="icon">a</span>
                     <p>
                         <a href="#">Titulo de la entrada</a>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. 
@@ -218,6 +235,8 @@
                     <span class="date">[11-05-2022. JuanD Olarte]</span>
                 </article>
                 <article class="article">
+                    <span class="icon">a</span>
+
                     <p>
                         <a href="#">Titulo de la entrada</a>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. 
@@ -227,6 +246,8 @@
                     <span class="date">[11-05-2022. JuanD Olarte]</span>
                 </article>
                 <article class="article">
+                    <span class="icon">a</span>
+
                     <p>
                         <a href="#">Titulo de la entrada</a>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. 
@@ -236,6 +257,8 @@
                     <span class="date">[11-05-2022. JuanD Olarte]</span>
                 </article>
                 <article class="article">
+                    <span class="icon">a</span>
+
                     <p>
                         <a href="#">Titulo de la entrada</a>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. 
