--- a/maquetacion-2/index.html
+++ b/maquetacion-2/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="img/supertux.png" type="image/x-icon">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Maste by Juanda in CSS</title>
+    <title>Master by Juanda in CSS</title>
 </head>
 <body>
     <!--Inicio Cabecera-->
@@ -27,5 +27,95 @@
         </div>
     </header>
     <!--Fin de la cabecera-->
+
+    <!--Inicio Banner-->
+    <section class="wrap wrap-content">
+        <section id="info">
+            <div id="banner">
+                <h1>Cursos de desarrollo con Juan Olarte Gomez</h1>
+            </div>
+      <!--Fin Banner-->
+
+      <!-- Inicio de las cards -->
+            <div id="cards">
+                <div class="card">
+                    <p class="icon">H</p>
+                    <h2 class="category">Desarrollo Web</h2>
+                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores dolore ullam natus reiciendis corporis ratione id dolorum inventore temporibus </p>
+                </div>
+                <div class="card">
+                    <p class="icon">_</p>
+                    <h2 class="category">Sistemas operativos</h2>
+                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores dolore ullam natus reiciendis corporis ratione id dolorum inventore temporibus </p>
+                </div>
+                <div class="card">
+                    <p class="icon">S</p>
+                    <h2 class="category">Hardware</h2>
+                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores dolore ullam natus reiciendis corporis ratione id dolorum inventore temporibus </p>
+                </div>
+                <div class="card">
+                    <p class="icon">u</p>
+                    <h2 class="category">Redes e internet</h2>
+                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores dolore ullam natus reiciendis corporis ratione id dolorum inventore temporibus </p>
+                </div>
+                <div class="card">
+                    <p class="icon">a</p>
+                    <h2 class="category">Bases de datos</h2>
+                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores dolore ullam natus reiciendis corporis ratione id dolorum inventore temporibus </p>
+                </div>
+            </div>
+            <!-- Fin de las cards -->
+        </section>
+
+        <!-- Inicio barra lateral -->
+        <aside id="lateral">
+            <h3>BUSCAR</h3>     
+                <div id="search">
+                    <form action="">
+                        <input type="text">
+                        <input type="button" value="L" class="icon">
+                    </form>
+                </div>
+            <h3>LOGIN</h3>
+            <div id="login" class="aside-box">
+                <form action="">
+                    <label id="user" class="icon">U</label>
+                    <input type="email">
+
+                    <label id="password" class="icon">w</label>
+                    <input type="password">
+
+                    <input type="submit" value="Entrar">
+                    <input type="reset" value="Limpiar">
+
+                    <a href="#">Registrate aqui</a>
+                    <a href="#">¿Has olvidado tu contraseña?</a>
+                </form>
+            </div>
+            <h3>REDES SOCIALES</h3>
+            <div id="social" class="aside-box">
+                <div class="twiter">
+                    <a href="#" class="icon">t</a>
+                </div>
+                <div class="facebook">
+                    <a href="#" class="icon">f</a>
+                </div>
+                <div class="youtube">
+                    <a href="#" class="icon">y</a>
+                </div>
+                <div class="google">
+                    <a href="#" class="icon">g</a>
+                </div>
+            </div>
+            <h3>PATROCINADORES</h3>
+            <div id="sponsors" class="aside-box">
+
+            </div>
+
+        </aside>
+        <!-- Fin de la barra lateral -->
+    </section>
+
+  
 </body>
 </html>
