--- a/maquetacion-2/index.html
+++ b/maquetacion-2/index.html
@@ -114,8 +114,166 @@
 
         </aside>
         <!-- Fin de la barra lateral -->
-    </section>
 
+        <!-- Inicio articulos -->
+        <section id="articles">
+            <h2>Ultimos articulos</h2>
+            <div class="clearfix"></div>
+            <article>
+                <div class="data">
+                    <span>Fecha: 12 dic</span>
+                    <span>Categoria: Pruebas</span>
+                </div>
+                <h4>
+                    <a href="#">Titulo del articulo</a>
+                </h4>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Perferendis est nostrum impedit enim repudiandae libero minima
+                    debitis quaerat nihil, quisquam perspiciatis sed vitae commodi,
+                    placeat deserunt atque iusto laudantium quas.
+                </p>
+            </article>
+            <article>
+                <div class="data">
+                    <span>Fecha: 12 dic</span>
+                    <span>Categoria: Pruebas</span>
+                </div>
+                <h4>
+                    <a href="#">Titulo del articulo</a>
+                </h4>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Perferendis est nostrum impedit enim repudiandae libero minima
+                    debitis quaerat nihil, quisquam perspiciatis sed vitae commodi,
+                    placeat deserunt atque iusto laudantium quas.
+                </p>
+            </article>
+            <article>
+                <div class="data">
+                    <span>Fecha: 12 dic</span>
+                    <span>Categoria: Pruebas</span>
+                </div>
+                <h4>
+                    <a href="#">Titulo del articulo</a>
+                </h4>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Perferendis est nostrum impedit enim repudiandae libero minima
+                    debitis quaerat nihil, quisquam perspiciatis sed vitae commodi,
+                    placeat deserunt atque iusto laudantium quas.
+                </p>
+            </article>
+            <article>
+                <div class="data">
+                    <span>Fecha: 12 dic</span>
+                    <span>Categoria: Pruebas</span>
+                </div>
+                <h4>
+                    <a href="#">Titulo del articulo</a>
+                </h4>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Perferendis est nostrum impedit enim repudiandae libero minima
+                    debitis quaerat nihil, quisquam perspiciatis sed vitae commodi,
+                    placeat deserunt atque iusto laudantium quas.
+                </p>
+            </article>
+            <article>
+                <div class="data">
+                    <span>Fecha: 12 dic</span>
+                    <span>Categoria: Pruebas</span>
+                </div>
+                <h4>
+                    <a href="#">Titulo del articulo</a>
+                </h4>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Perferendis est nostrum impedit enim repudiandae libero minima
+                    debitis quaerat nihil, quisquam perspiciatis sed vitae commodi,
+                    placeat deserunt atque iusto laudantium quas.
+                </p>
+            </article>
+            <article>
+                <div class="data">
+                    <span>Fecha: 12 dic</span>
+                    <span>Categoria: Pruebas</span>
+                </div>
+                <h4>
+                    <a href="#">Titulo del articulo</a>
+                </h4>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Perferendis est nostrum impedit enim repudiandae libero minima
+                    debitis quaerat nihil, quisquam perspiciatis sed vitae commodi,
+                    placeat deserunt atque iusto laudantium quas.
+                </p>
+            </article>
+
+            <article id="blog">
+                <a href="#">IR AL BLOG</a>
+            </article>
+        </section>
+
+        <!-- Fin articulos -->
+    </section>
+    <!-- Inicio del pie de pagina -->
+    <footer id="footer">
+        <div class="clearfix"></div>
+        <div class="wrap">
+
+            <div id="menu_footer">
+                <h5>MENU</h5>
+                <ul>
+                    <li><a href="">INICIO</a></li>
+                    <li><a href="">BLOG</a></li>
+                    <li><a href="">FORMACION</a></li>
+                    <li><a href="">CONTACTO</a></li>
+                </ul>
+            </div>
+            <div id="location">
+                <h5>¿Donde estamos?</h5>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.50020596406!2d-75.56102378544524!3d6.19754269551341!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e46829a65a5d1ab%3A0xacb563511f221ff3!2sEl%20Tesoro%20Parque%20Comercial!5e0!3m2!1ses!2sco!4v1656347321214!5m2!1ses!2sco" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+
+            <div id="info">
+                <h5>Desarrollado con </h5>
+                <p>
+                    <img src="img/html5-badge-h-css3-graphics-multimedia-performance-semantics.png" alt="Creado con HTML y CSS">
+                </p>
+
+                <h5>Optimizado para</h5>
+                <p id="browsers">
+                    <a href="#">
+                        <img src="img/firefox-icon.png" alt="Firefox" title="Firefox">
+                    </a>
+                    <a href="#">
+                        <img src="img/chrome.png" alt="Chrome" title="Chrome">
+                    </a>
+                    <a href="#">
+                        <img src="img/Opera_256x256.png" alt="Opera" title="Opera">
+                    </a>
+                    <a href="#">
+                        <img src="img/safari.png" alt="Safari" title="Safari">
+                    </a>
+                    <a href="#">
+                        <img src="img/android.png" alt="Android" title="Android">
+                    </a>
+                    <a href="#">
+                        <img src="img/ios.png" alt="Apple" title="Apple">
+                    </a>
+                </p>
+
+                <h5>AUTOR</h5>
+                <p>
+                    &copy; Juanda Olarte Gomez
+                </p>
+            </div>
+        </div>
+
+    </footer>
+
+    <!-- Fin del pie de pagina -->
   
 </body>
 </html>
