--- a/maquetacion-2/index.html
+++ b/maquetacion-2/index.html
@@ -96,15 +96,19 @@
             <div id="social" class="aside-box">
                 <div class="twiter">
                     <a href="#" class="icon">t</a>
+                    <p class="overlay"> Twitter</p>
                 </div>
                 <div class="facebook">
                     <a href="#" class="icon">f</a>
+                    <p class="overlay"> Facebook</p>
                 </div>
                 <div class="youtube">
                     <a href="#" class="icon">y</a>
+                    <p class="overlay"> YouTube</p>
                 </div>
                 <div class="google">
                     <a href="#" class="icon">g</a>
+                    <p class="overlay"> Google</p>
                 </div>
             </div>
             <h3>PATROCINADORES</h3>
