Responsive para maquetacion-2

--- a/maquetacion-2/index.html
+++ b/maquetacion-2/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="img/supertux.png" type="image/x-icon">
-    <link rel="stylesheet" href="css/styles.css">
     <title>Master by Juanda in CSS</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/responsive.css">
 </head>
 <body>
     <!--Inicio Cabecera-->
@@ -68,6 +69,7 @@
         </section>
 
         <!-- Inicio barra lateral -->
+        <div class="clearfix"></div>
         <aside id="lateral">
             <h3>BUSCAR</h3>     
                 <div id="search">
